--- a/area/k8s/Makefile
+++ b/area/k8s/Makefile
@@ -26,12 +26,24 @@ setup-grafana:
 update-grafana:
 	kubectl apply -f grafana --namespace grafana
 
-# Install helm.
-install-helm:
-	helm upgrade --install nginx-ingress-release nginx/ingress-nginx --namespace nginx-ingress --create-namespace --version 4.11.4 -f nginx/values.yaml
-	helm upgrade --install grafana-agent-release --create-namespace grafana/grafana-agent-operator -n grafana --version v0.5.1
-	helm upgrade --install circleci-release circleci/circleci-release-agent --set tokenSecret.token=$(CIRCLECI_K8S_TOKEN) --create-namespace --namespace circleci --set managedNamespaces="{lean}" --version v1.3.4
+# Install circleci.
+install-circleci:
+	helm upgrade --install circleci-release circleci/circleci-release-agent --set tokenSecret.token=$(CIRCLECI_K8S_TOKEN) --create-namespace --namespace circleci --set managedNamespaces="{lean}" --version v1.3.5
+
+# Install metrics server.
+install-metrics-server:
 	helm upgrade --install metrics-server-release metrics-server/metrics-server --create-namespace --namespace metrics-server --version 3.12.2
+
+# Install nginx ingress controller.
+install-nginx-ingress:
+	helm upgrade --install nginx-ingress-release nginx/ingress-nginx --namespace nginx-ingress --create-namespace --version 4.12.0 -f nginx/values.yaml
+
+# Install grafana agent.
+install-grafana-agent:
+	helm upgrade --install grafana-agent-release --create-namespace grafana/grafana-agent-operator -n grafana --version v0.5.1
+
+# Install helm.
+install-helm: install-circleci install-metrics-server install-nginx-ingress install-grafana-agent
 
 # Update deps.
 update: update-grafana
