--- a/area/apps/lean/konfig.yaml
+++ b/area/apps/lean/konfig.yaml
@@ -16,10 +16,8 @@ source:
     token: /etc/secrets/gh/token
 telemetry:
   logger:
-    kind: otlp
-    url: https://otlp-gateway-prod-eu-west-2.grafana.net/otlp/v1/logs
-    headers:
-      Authorization: /etc/secrets/otlp/token
+    kind: json
+    level: info
   metrics:
     kind: otlp
     url: https://otlp-gateway-prod-eu-west-2.grafana.net/otlp/v1/metrics
