--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -332,7 +332,7 @@ workflows:
     jobs:
       - build
       - release:
-          serial-group: << pipeline.git.branch >>
+          serial-group: << pipeline.git.branch >>-release
           requires:
             - build
           filters:
@@ -347,7 +347,7 @@ workflows:
             branches:
               ignore: master
       - apps_update:
-          serial-group: << pipeline.git.branch >>
+          serial-group: << pipeline.git.branch >>-apps_update
           context: infraops
           filters:
             branches:
@@ -362,7 +362,7 @@ workflows:
             branches:
               ignore: master
       - cf_update:
-          serial-group: << pipeline.git.branch >>
+          serial-group: << pipeline.git.branch >>-cf_update
           context: infraops
           filters:
             branches:
@@ -376,7 +376,7 @@ workflows:
             branches:
               ignore: master
       - do_update:
-          serial-group: << pipeline.git.branch >>
+          serial-group: << pipeline.git.branch >>-do_update
           context: infraops
           filters:
             branches:
@@ -390,7 +390,7 @@ workflows:
             branches:
               ignore: master
       - gh_update:
-          serial-group: << pipeline.git.branch >>
+          serial-group: << pipeline.git.branch >>-gh_update
           context: infraops
           filters:
             branches:
