--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -39,6 +39,7 @@ jobs:
           keys:
             - infraops-build-go-build-cache-{{ checksum "go.sum" }}
             - infraops-build-go-build-cache-
+      - run: make -C api lint
       - run: make lint
       - run: make sec
       - run: make specs
