feat(gh): move to use a configuration language
https://protobuf.dev/reference/protobuf/textformat-spec/

--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -41,7 +41,7 @@ jobs:
             - infraops-build-go-build-cache-
       - run: make api-lint
       - run: make api-breaking
-      - run: make lint
+      - run: make golangci-lint
       - run: make sec
       - run: make specs
       - save_cache:
