fix(apps): update versions
https://github.com/alexfalkowski/go-service/pull/1485

--- a/area/apps/lean/konfig.yaml
+++ b/area/apps/lean/konfig.yaml
@@ -30,6 +30,8 @@ telemetry:
       Authorization: /etc/secrets/otlp/token
 token:
   kind: opaque
+  opaque:
+    name: konfig
 transport:
   http:
     retry:
