--- a/area/apps/lean/konfig.yaml
+++ b/area/apps/lean/konfig.yaml
@@ -29,9 +29,11 @@ telemetry:
     headers:
       Authorization: /etc/secrets/otlp/token
 token:
-  kind: opaque
-  opaque:
-    name: konfig
+  kind: ssh
+  ssh:
+    keys:
+      - name: konfig
+        public: /etc/secrets/konfig-public/token
 transport:
   http:
     retry:
