--- a/area/apps/lean/init.yaml
+++ b/area/apps/lean/init.yaml
@@ -30,8 +30,6 @@ telemetry:
     headers:
       Authorization: /etc/secrets/otlp/token
 token:
-  kind: ssh
-  ssh:
-    key:
-      name: konfig
-      private: /etc/secrets/konfig-private/token
+  kind: opaque
+  opaque:
+    name: konfig
