--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -43,7 +43,7 @@ jobs:
       - run: make clean
       - run: make api-lint
       - run: make api-breaking
-      - run: make golangci-lint
+      - run: make lint
       - run: make sec
       - run: make specs
       - save_cache:
