feat(apps): default to empty articles when missing for sasha
https://github.com/alexfalkowski/sasha/pull/29

--- a/area/apps/lean/sasha.yaml
+++ b/area/apps/lean/sasha.yaml
@@ -10,7 +10,7 @@ limiter:
   interval: 1s
 site:
   articles:
-    address: https://cms.sasha-adventures.com
+    address: https://cms.sasha-adventures.com/sasha-cms
     retry:
       attempts: 3
       backoff: 100ms
