--- a/area/apps/lean/sasha.yaml
+++ b/area/apps/lean/sasha.yaml
@@ -10,7 +10,7 @@ limiter:
   interval: 1s
 site:
   articles:
-    address: https://cms.sasha-adventures.com/sasha-cms
+    address: https://cms.sasha-adventures.com/articles
     retry:
       attempts: 3
       backoff: 100ms
