--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -17,7 +17,9 @@ parameters:
 jobs:
   build:
     docker:
-      - image: alexfalkowski/go:2.13
+      - image: alexfalkowski/go:2.14
+        environment:
+          GOGC: 30
     working_directory: ~/infraops
     steps:
       - checkout
@@ -60,7 +62,7 @@ jobs:
     resource_class: large
   release:
     docker:
-      - image: alexfalkowski/release:3.15
+      - image: alexfalkowski/release:3.17
     working_directory: ~/infraops
     steps:
       - checkout
@@ -72,7 +74,7 @@ jobs:
 
   apps_preview:
     docker:
-      - image: alexfalkowski/k8s:1.42
+      - image: alexfalkowski/k8s:1.44
     working_directory: ~/infraops
     steps:
       - checkout
@@ -107,7 +109,7 @@ jobs:
     resource_class: large
   apps_update:
     docker:
-      - image: alexfalkowski/k8s:1.42
+      - image: alexfalkowski/k8s:1.44
     working_directory: ~/infraops
     steps:
       - checkout
@@ -146,7 +148,9 @@ jobs:
 
   cf_preview:
     docker:
-      - image: alexfalkowski/k8s:1.42
+      - image: alexfalkowski/k8s:1.44
+        environment:
+          GOGC: 50
     working_directory: ~/infraops
     steps:
       - checkout
@@ -180,7 +184,9 @@ jobs:
     resource_class: large
   cf_update:
     docker:
-      - image: alexfalkowski/k8s:1.42
+      - image: alexfalkowski/k8s:1.44
+        environment:
+          GOGC: 50
     working_directory: ~/infraops
     steps:
       - checkout
@@ -216,7 +222,7 @@ jobs:
 
   do_preview:
     docker:
-      - image: alexfalkowski/k8s:1.42
+      - image: alexfalkowski/k8s:1.44
     working_directory: ~/infraops
     steps:
       - checkout
@@ -250,7 +256,7 @@ jobs:
     resource_class: large
   do_update:
     docker:
-      - image: alexfalkowski/k8s:1.42
+      - image: alexfalkowski/k8s:1.44
     working_directory: ~/infraops
     steps:
       - checkout
@@ -286,7 +292,7 @@ jobs:
 
   gh_preview:
     docker:
-      - image: alexfalkowski/k8s:1.42
+      - image: alexfalkowski/k8s:1.44
     working_directory: ~/infraops
     steps:
       - checkout
@@ -320,7 +326,7 @@ jobs:
     resource_class: large
   gh_update:
     docker:
-      - image: alexfalkowski/k8s:1.42
+      - image: alexfalkowski/k8s:1.44
     working_directory: ~/infraops
     steps:
       - checkout
@@ -356,7 +362,6 @@ jobs:
 
 workflows:
   infraops:
-    when: false
     jobs:
       - build
       - release:
@@ -382,7 +387,7 @@ workflows:
               only: master
 
   cf:
-    when: false
+    when: << pipeline.parameters.cf >>
     jobs:
       - cf_preview:
           context: infraops
