--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -17,7 +17,7 @@ parameters:
 jobs:
   build:
     docker:
-      - image: alexfalkowski/go:2.16
+      - image: alexfalkowski/go:2.17
     working_directory: ~/infraops
     steps:
       - checkout
@@ -42,7 +42,7 @@ jobs:
             - infraops-build-go-build-cache-
       - run: make clean
       - run: make api-lint
-      # - run: make api-breaking
+      - run: make api-breaking
       - run: make lint
       - run: make sec
       - run: make specs
@@ -60,7 +60,7 @@ jobs:
     resource_class: large
   release:
     docker:
-      - image: alexfalkowski/release:3.18
+      - image: alexfalkowski/release:3.19
     working_directory: ~/infraops
     steps:
       - checkout
@@ -72,7 +72,7 @@ jobs:
 
   apps_preview:
     docker:
-      - image: alexfalkowski/k8s:1.47
+      - image: alexfalkowski/k8s:1.48
     working_directory: ~/infraops
     steps:
       - checkout
@@ -107,7 +107,7 @@ jobs:
     resource_class: large
   apps_update:
     docker:
-      - image: alexfalkowski/k8s:1.47
+      - image: alexfalkowski/k8s:1.48
     working_directory: ~/infraops
     steps:
       - checkout
@@ -146,7 +146,7 @@ jobs:
 
   cf_preview:
     docker:
-      - image: alexfalkowski/k8s:1.47
+      - image: alexfalkowski/k8s:1.48
     working_directory: ~/infraops
     steps:
       - checkout
@@ -180,7 +180,7 @@ jobs:
     resource_class: large
   cf_update:
     docker:
-      - image: alexfalkowski/k8s:1.47
+      - image: alexfalkowski/k8s:1.48
     working_directory: ~/infraops
     steps:
       - checkout
@@ -216,7 +216,7 @@ jobs:
 
   do_preview:
     docker:
-      - image: alexfalkowski/k8s:1.47
+      - image: alexfalkowski/k8s:1.48
     working_directory: ~/infraops
     steps:
       - checkout
@@ -250,7 +250,7 @@ jobs:
     resource_class: large
   do_update:
     docker:
-      - image: alexfalkowski/k8s:1.47
+      - image: alexfalkowski/k8s:1.48
     working_directory: ~/infraops
     steps:
       - checkout
@@ -286,7 +286,7 @@ jobs:
 
   gh_preview:
     docker:
-      - image: alexfalkowski/k8s:1.47
+      - image: alexfalkowski/k8s:1.48
     working_directory: ~/infraops
     steps:
       - checkout
@@ -320,7 +320,7 @@ jobs:
     resource_class: large
   gh_update:
     docker:
-      - image: alexfalkowski/k8s:1.47
+      - image: alexfalkowski/k8s:1.48
     working_directory: ~/infraops
     steps:
       - checkout
