--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -72,7 +72,7 @@ jobs:
 
   apps_preview:
     docker:
-      - image: alexfalkowski/k8s:1.48
+      - image: alexfalkowski/k8s:1.49
     working_directory: ~/infraops
     steps:
       - checkout
@@ -107,7 +107,7 @@ jobs:
     resource_class: large
   apps_update:
     docker:
-      - image: alexfalkowski/k8s:1.48
+      - image: alexfalkowski/k8s:1.49
     working_directory: ~/infraops
     steps:
       - checkout
@@ -136,6 +136,7 @@ jobs:
       - run: make pulumi-login
       - run: make area=apps pulumi-update
       - run: make -C area/apps verify
+      - run: make -C area/apps load
       - run: make -C area/apps lint
       - save_cache:
           name: save go build cache
@@ -146,7 +147,7 @@ jobs:
 
   cf_preview:
     docker:
-      - image: alexfalkowski/k8s:1.48
+      - image: alexfalkowski/k8s:1.49
     working_directory: ~/infraops
     steps:
       - checkout
@@ -180,7 +181,7 @@ jobs:
     resource_class: large
   cf_update:
     docker:
-      - image: alexfalkowski/k8s:1.48
+      - image: alexfalkowski/k8s:1.49
     working_directory: ~/infraops
     steps:
       - checkout
@@ -216,7 +217,7 @@ jobs:
 
   do_preview:
     docker:
-      - image: alexfalkowski/k8s:1.48
+      - image: alexfalkowski/k8s:1.49
     working_directory: ~/infraops
     steps:
       - checkout
@@ -250,7 +251,7 @@ jobs:
     resource_class: large
   do_update:
     docker:
-      - image: alexfalkowski/k8s:1.48
+      - image: alexfalkowski/k8s:1.49
     working_directory: ~/infraops
     steps:
       - checkout
@@ -286,7 +287,7 @@ jobs:
 
   gh_preview:
     docker:
-      - image: alexfalkowski/k8s:1.48
+      - image: alexfalkowski/k8s:1.49
     working_directory: ~/infraops
     steps:
       - checkout
@@ -320,7 +321,7 @@ jobs:
     resource_class: large
   gh_update:
     docker:
-      - image: alexfalkowski/k8s:1.48
+      - image: alexfalkowski/k8s:1.49
     working_directory: ~/infraops
     steps:
       - checkout
