--- a/area/apps/lean/standort.yaml
+++ b/area/apps/lean/standort.yaml
@@ -14,6 +14,9 @@ telemetry:
     level: info
   metrics:
     kind: prometheus
+  tracer:
+    kind: otlp
+    url: http://localhost:4318/v1/traces
 transport:
   http:
     retry:
