--- a/area/apps/lean/bezeichner.yaml
+++ b/area/apps/lean/bezeichner.yaml
@@ -32,6 +32,7 @@ telemetry:
     kind: prometheus
   tracer:
     kind: otlp
+    url: http://localhost:4318/v1/traces
 transport:
   http:
     retry:
