--- a/area/apps/lean/web.yaml
+++ b/area/apps/lean/web.yaml
@@ -16,6 +16,7 @@ telemetry:
     kind: prometheus
   tracer:
     kind: otlp
+    url: http://localhost:4318/v1/traces
 transport:
   http:
     retry:
