feat(apps): move to new cluster

--- a/area/k8s/Makefile
+++ b/area/k8s/Makefile
@@ -29,7 +29,7 @@ install-nginx-ingress:
 	@helm upgrade --install nginx-ingress-release nginx/ingress-nginx --namespace nginx-ingress --create-namespace --version 4.12.2 -f nginx/values.yaml
 
 # Install helm.
-install-helm: install-circleci install-metrics-server install-nginx-ingress install-grafana install-datadog
+install-helm: install-circleci install-metrics-server install-nginx-ingress
 
 # All pods.
 pods:
