--- a/area/apps/lean/bezeichner.yaml
+++ b/area/apps/lean/bezeichner.yaml
@@ -33,6 +33,8 @@ telemetry:
   tracer:
     kind: otlp
     url: http://localhost:4318/v1/traces
+token:
+  kind: none
 transport:
   http:
     retry:
