--- a/.circleci/continue_config.yml
+++ b/.circleci/continue_config.yml
@@ -17,24 +17,24 @@ parameters:
 jobs:
   build:
     docker:
-      - image: alexfalkowski/go:2.37
+      - image: alexfalkowski/go:2.38
     working_directory: ~/infraops
     steps:
       - checkout
       - run: git submodule sync
       - run: git submodule update --init
       - restore_cache:
-          name: restore deps
+          name: restore go cache
           keys:
             - infraops-build-go-cache-{{ checksum "go.sum" }}
             - infraops-build-go-cache-
       - run: make clean
       - run: make dep
       - save_cache:
-          name: save deps
+          name: save go cache
           key: infraops-build-go-cache-{{ checksum "go.sum" }}
           paths:
-            - /home/circleci/go/pkg/mod
+            - ~/go/pkg/mod
       - restore_cache:
           name: restore go build cache
           keys:
@@ -43,14 +43,24 @@ jobs:
       - run: make clean
       - run: make api-lint
       - run: make api-breaking
+      - restore_cache:
+          name: restore go lint cache
+          keys:
+            - infraops-build-go-lint-cache-{{ checksum "go.sum" }}
+            - infraops-build-go-lint-cache-
       - run: make lint
+      - save_cache:
+          name: save go lint cache
+          key: infraops-build-go-lint-cache-{{ checksum "go.sum" }}
+          paths:
+            - ~/.cache/golangci-lint
       - run: make sec
       - run: make specs
       - save_cache:
           name: save go build cache
           key: infraops-build-go-build-cache-{{ checksum "go.sum" }}
           paths:
-            - /home/circleci/.cache/go-build
+            - ~/.cache/go-build
       - run: make coverage
       - store_test_results:
           path: test/reports
@@ -90,7 +100,7 @@ jobs:
           name: save deps
           key: infraops-apps-go-cache-{{ checksum "go.sum" }}
           paths:
-            - /home/circleci/go/pkg/mod
+            - ~/go/pkg/mod
       - restore_cache:
           name: restore go build cache
           keys:
@@ -103,7 +113,7 @@ jobs:
           name: save go build cache
           key: infraops-apps-go-build-cache-{{ checksum "go.sum" }}
           paths:
-            - /home/circleci/.cache/go-build
+            - ~/.cache/go-build
     resource_class: large
   apps_update:
     docker:
@@ -126,7 +136,7 @@ jobs:
           name: save deps
           key: infraops-apps-go-cache-{{ checksum "go.sum" }}
           paths:
-            - /home/circleci/go/pkg/mod
+            - ~/go/pkg/mod
       - restore_cache:
           name: restore go build cache
           keys:
@@ -142,7 +152,7 @@ jobs:
           name: save go build cache
           key: infraops-apps-go-build-cache-{{ checksum "go.sum" }}
           paths:
-            - /home/circleci/.cache/go-build
+            - ~/.cache/go-build
     resource_class: large
 
   cf_preview:
@@ -164,7 +174,7 @@ jobs:
           name: save deps
           key: infraops-cf-go-cache-{{ checksum "go.sum" }}
           paths:
-            - /home/circleci/go/pkg/mod
+            - ~/go/pkg/mod
       - restore_cache:
           name: restore go build cache
           keys:
@@ -177,7 +187,7 @@ jobs:
           name: save go build cache
           key: infraops-cf-go-build-cache-{{ checksum "go.sum" }}
           paths:
-            - /home/circleci/.cache/go-build
+            - ~/.cache/go-build
     resource_class: large
   cf_update:
     docker:
@@ -199,7 +209,7 @@ jobs:
           name: save deps
           key: infraops-cf-go-cache-{{ checksum "go.sum" }}
           paths:
-            - /home/circleci/go/pkg/mod
+            - ~/go/pkg/mod
       - restore_cache:
           name: restore go build cache
           keys:
@@ -212,7 +222,7 @@ jobs:
           name: save go build cache
           key: infraops-cf-go-build-cache-{{ checksum "go.sum" }}
           paths:
-            - /home/circleci/.cache/go-build
+            - ~/.cache/go-build
     resource_class: large
 
   do_preview:
@@ -234,7 +244,7 @@ jobs:
           name: save deps
           key: infraops-do-go-cache-{{ checksum "go.sum" }}
           paths:
-            - /home/circleci/go/pkg/mod
+            - ~/go/pkg/mod
       - restore_cache:
           name: restore go build cache
           keys:
@@ -247,7 +257,7 @@ jobs:
           name: save go build cache
           key: infraops-do-go-build-cache-{{ checksum "go.sum" }}
           paths:
-            - /home/circleci/.cache/go-build
+            - ~/.cache/go-build
     resource_class: large
   do_update:
     docker:
@@ -269,7 +279,7 @@ jobs:
           name: save deps
           key: infraops-do-go-cache-{{ checksum "go.sum" }}
           paths:
-            - /home/circleci/go/pkg/mod
+            - ~/go/pkg/mod
       - restore_cache:
           name: restore go build cache
           keys:
@@ -282,7 +292,7 @@ jobs:
           name: save go build cache
           key: infraops-do-go-build-cache-{{ checksum "go.sum" }}
           paths:
-            - /home/circleci/.cache/go-build
+            - ~/.cache/go-build
     resource_class: large
 
   gh_preview:
@@ -304,7 +314,7 @@ jobs:
           name: save deps
           key: infraops-gh-go-cache-{{ checksum "go.sum" }}
           paths:
-            - /home/circleci/go/pkg/mod
+            - ~/go/pkg/mod
       - restore_cache:
           name: restore go build cache
           keys:
@@ -317,7 +327,7 @@ jobs:
           name: save go build cache
           key: infraops-gh-go-build-cache-{{ checksum "go.sum" }}
           paths:
-            - /home/circleci/.cache/go-build
+            - ~/.cache/go-build
     resource_class: large
   gh_update:
     docker:
@@ -339,7 +349,7 @@ jobs:
           name: save deps
           key: infraops-gh-go-cache-{{ checksum "go.sum" }}
           paths:
-            - /home/circleci/go/pkg/mod
+            - ~/go/pkg/mod
       - restore_cache:
           name: restore go build cache
           keys:
@@ -352,7 +362,7 @@ jobs:
           name: save go build cache
           key: infraops-gh-go-build-cache-{{ checksum "go.sum" }}
           paths:
-            - /home/circleci/.cache/go-build
+            - ~/.cache/go-build
     resource_class: large
 
 workflows:
